--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,20 @@
 spring:
+  jpa:
+    open-in-view: false
+    show-sql: true
+---
+spring:
   config:
     activate:
       on-profile: local
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/template
+    url: jdbc:postgresql://localhost:15432/template
     username: template
     password: template
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
 ---
 spring:
   config:
@@ -18,15 +22,28 @@ spring:
       on-profile: dev
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/template
+    url: jdbc:postgresql://localhost:15432/template
     username: template
     password: template
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
 server:
   port: 80
+logging:
+  level:
+    root: ERROR
+    '[net.bitnine]': DEBUG
+  file:
+    path: logs
+    name: template-log.log
+  pattern:
+    file: "%d %-5level [%thread] %logger{0} : %msg%n"
+  logback:
+    rollingpolicy:
+      max-file-size: 10MB
+      max-history: 20
+      file-name-pattern: template-log-%d{yyyy-MM-dd}.log
 ---
 spring:
   config:
@@ -34,3 +51,17 @@ spring:
       on-profile: prod
 server:
   port: 80
+logging:
+  level:
+    root: ERROR
+    '[net.bitnine]': ERROR
+  file:
+    path: logs
+    name: template-log.log
+  pattern:
+    file: "%d %-5level [%thread] %logger{0} : %msg%n"
+  logback:
+    rollingpolicy:
+      max-file-size: 10MB
+      max-history: 20
+      file-name-pattern: template-log-%d{yyyy-MM-dd}.log
